--- a/html/list.html
+++ b/html/list.html
@@ -6,7 +6,13 @@
 				<span>VERSIÖN</span>
 			</div>
 			<div>
-				<a class="button_small" onclick="document.getElementById('file').click()">UPLOAD A MOVIE</a>
+			<div class="char_dropdown button_small">
+			<div>UPLOAD</div>
+			<menu>
+				<a onclick="document.getElementById('file').click()">Movie</a>
+				<a onclick="document.getElementById('file2').click()">Character</a>
+				</menu>
+				</div>
 				<div class="char_dropdown button_small">
 					<div>CREATE A CHARACTER</div>
 					<menu>
