--- a/html/list.html
+++ b/html/list.html
@@ -10,7 +10,8 @@
 			<div>UPLOAD</div>
 			<menu>
 				<a onclick="document.getElementById('file').click()">Movie</a>
-				<a onclick="document.getElementById('file2').click()">Character</a>
+				<!-- i will skip this dropdown for now because someone did not get this to work yet.
+				<a onclick="document.getElementById('file2').click()">Character</a>-->
 				</menu>
 				</div>
 				<div class="char_dropdown button_small">
