--- a/html/list.html
+++ b/html/list.html
@@ -73,7 +73,7 @@
 </footer>
 
 <form enctype='multipart/form-data' action='/upload_movie' method='post'>
-	<input id='file' type="file" onchange="this.form.submit()" name='import' />
+	<input id='file' type="file" onchange="this.form.submit()" name='import' accept=".xml"/>
 </form>
 
 </body>
